--- a/movie-rater/src/App.css
+++ b/movie-rater/src/App.css
@@ -30,3 +30,8 @@
   margin-top: 20px;
   border-top: 2px solid purple;
 }
+
+.rate-container .fa-star {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
